force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Cache__c/fields/agf__Deleted__c.field-meta.xml
<CustomField>
    <fullName>agf__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a corresponding scrum team record was deleted causing this record to be created</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>