force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Cache__c/fields/agf__Group_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Group_ID__c</fullName>
    <description>Used to delete group memberships</description>
    <label>Group ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>