force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Cache__c/fields/agf__Inserted__c.field-meta.xml
<CustomField>
    <fullName>agf__Inserted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a corresponding scrum team record was inserted causing this record to be created</description>
    <label>Inserted</label>
    <type>Checkbox</type>
</CustomField>