force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team_Cache__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>agf__Name__c</columns>
    <columns>agf__Type__c</columns>
    <columns>NAME</columns>
    <columns>agf__ScrumteamOrScrumteamMember__c</columns>
    <columns>agf__Deleted__c</columns>
    <columns>agf__Inserted__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>